# principia-rs

./: Cargo.toml  README.md
behaviour/command/: README.md
behaviour/command/command_fn/: Cargo.toml
behaviour/command/command_fn/src/: main.rs
behaviour/command/command_function/: Cargo.toml
behaviour/command/command_function/src/: main.rs
behaviour/command/command_traits/: Cargo.toml
behaviour/command/command_traits/src/: main.rs
idioms_2_01/: Cargo.toml
idioms_2_01/src/: main.rs
idioms_2_02/: Cargo.toml
idioms_2_02/src/: main.rs
idioms_2_03/: Cargo.toml
idioms_2_03/src/: main.rs
idioms_2_04/: Cargo.toml
idioms_2_04/src/: main.rs
idioms_2_05/: Cargo.toml
idioms_2_05/src/: main.rs
idioms_2_06/: Cargo.toml
idioms_2_06/src/: main.rs
idioms_2_07/: Cargo.toml
idioms_2_07/src/: main.rs
idioms_2_08/: Cargo.toml
idioms_2_08/src/: main.rs
idioms_2_09_01/: Cargo.toml
idioms_2_09_01/src/: main.rs
idioms_2_09_02/: Cargo.toml
idioms_2_09_02/src/: main.rs
idioms_2_10/: Cargo.toml
idioms_2_10/src/: main.rs
idioms_2_11/: Cargo.toml
idioms_2_11/src/: main.rs
idioms_2_12/: Cargo.toml
idioms_2_12/src/: main.rs
idioms_2_13/: Cargo.toml
idioms_2_13/src/: main.rs
idioms_2_14/: Cargo.toml
idioms_2_14/src/: main.rs
