[workspace]

members = [
    "idioms_2_01",
    "idioms_2_02",
    "idioms_2_03",
    "idioms_2_04",
    "idioms_2_05",
    "idioms_2_06",
    "idioms_2_07",
    "idioms_2_08",
    "idioms_2_09_01",
    "idioms_2_09_02",
    "idioms_2_10",
    "idioms_2_11",
    "idioms_2_12",
    "idioms_2_13",
    "idioms_2_14",
    "./behaviour/command/command_traits",
    "./behaviour/command/command_function",
]
